trying to fix issue #1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,20 +4,21 @@ project(video_from_rosbag)
 find_package(catkin REQUIRED
   cv_bridge
   sensor_msgs
-  message_generation
+  rospy
 )
 
-find_package(OpenCV REQUIRED)
-
-generate_messages(
-  DEPENDENCIES
-  sensor_msgs
-)
+catkin_python_setup()
 
 catkin_package(
   CATKIN_DEPENDS
     cv_bridge
     sensor_msgs
-  DEPENDS
-    OpenCV
+    rospy
 )
+
+install(DIRECTORY
+        launch
+        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
+catkin_install_python(PROGRAMS nodes/convert_to_mp4.py
+                      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
